--- a/public/styles/introCard.css
+++ b/public/styles/introCard.css
@@ -31,3 +31,9 @@
     width: 90%;
   }
 }
+
+@media screen and (max-width: 900px) {
+  .introduction {
+    margin-top: 0;
+  }
+}
